Adjust margin of support widgets to help avoid going off screen on mobile

--- a/_sass/bootswatch/custom/_bootswatch.scss
+++ b/_sass/bootswatch/custom/_bootswatch.scss
@@ -157,7 +157,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
 }
 
 .supportwidget {
-  margin: 0 50px;
+  margin-right: 20px;
 }
 
 .mainpagebuttons {
